# RustConsoleTerrain

./: .gitignore  README.md
Project/: Dockerfile  README.md
Project/console_gen/: Cargo.toml
Project/console_gen/config/: config.json
Project/console_gen/src/: generator.rs  main.rs
Project/console_gen/src/server/: mod.rs
Project/console_gen/src/terrgen/: mod.rs
Project/python/: Dockerfile  README.md  app.py  register.py  utilities.py
Project/python/templates/: base.html
